inline math fix

--- a/_posts/2025-07-14-mpt.md
+++ b/_posts/2025-07-14-mpt.md
@@ -41,7 +41,7 @@ The capital gains tax discount was introduced after the [1999 Ralph Review](http
 
 > The widespread privatization of major public sector enterprises has greatly increased the number of Australian households owning shares. A less harsh CGT regime which encourages taxpayers to invest in such assets will help entrench and build upon these changes. - Ralph Review
 
-As an example, if somebody makes an investment that appreciates in value by \$100,000 and disposes of it after 1 year of holding, the capital gain is discounted by 50\% before being added to the investor's personal income. In this case, they would pay tax as if they had earned an additional \$50,000 (instead of the \$100,000).
+As an example, if somebody makes an investment that appreciates in value by \\$100,000 and disposes of it after 1 year of holding, the capital gain is discounted by 50\% before being added to the investor's personal income. In this case, they would pay tax as if they had earned an additional \\$50,000 (instead of the \\$100,000).
 
 ### Deductions and Negative Gearing
 
@@ -51,7 +51,7 @@ Costs associated with investments are generally considered tax deductible. This 
 
 While both policies individually sound very reasonable, their combination allows for a tax arbitrage, where tax payers are incentivized to shift regular income into capital gains via leverage.
 
-For example, if a tax payer on the top marginal rate (43%) makes and investment which costs \$110,000 to upkeep (e.g. interest payments), then sells the investment for a \$100,000 capital gain, the \$110,000 is deducted from their pre-tax income while only \$50,000 (50% of the \$100,000 capital gain) is added. As a result, they have a net \$60,000 tax deduction, resulting in a \$25,800 lower tax bill. Even after the \$10,000 loss (capital gain minus expenses) they end up \$15,800 ahead after tax.
+For example, if a tax payer on the top marginal rate (43%) makes and investment which costs \\$110,000 to upkeep (e.g. interest payments), then sells the investment for a \\$100,000 capital gain, the \\$110,000 is deducted from their pre-tax income while only \\$50,000 (50% of the \\$100,000 capital gain) is added. As a result, they have a net \\$60,000 tax deduction, resulting in a \\$25,800 lower tax bill. Even after the \\$10,000 loss (capital gain minus expenses) they end up \\$15,800 ahead after tax.
 
 This makes even poor investments - investments which cost more than they make - potentially profitable after tax. The best investment vehicles are those with strong capital appreciation and low interest rates, and it's generally accepted that the best contender for that in the Australian investment landscape is residential real estate.
 
