--- a/_posts/2025-07-14-mpt.md
+++ b/_posts/2025-07-14-mpt.md
@@ -19,6 +19,8 @@ window.MathJax = {
 };
 </script>
 
+## Introduction
+
 The capital gains tax (CGT) discount was introduced in Australia in 1999 to simplify and incentivize investment in the share market. More recently, in the midst of a housing crisis, treasury has advised that the discount has a very small affect on home prices - of the order of 1-2% - and the current federal housing minister is on the record stating their policies aim for modest, stable residential real estate increases.
 
 In this essay, I argue that these statements are mutually incompatible with analysis from modern portfolio theory. Specifically:
@@ -27,7 +29,7 @@ In this essay, I argue that these statements are mutually incompatible with anal
 - this shift away from higher risk assets (like shares) can be larger than the increase in overall investment, resulting in _less_ net investment in high risk assets; and
 - these factors compound for low risk assets, resulting in a disproportionate effect.
 
-## Disclaimer
+### Disclaimer
 
 I am a mathematician and a computer scientist. While I've attempted to make things digestible where possible, I make no apology for including equations and graphs. If you understand quadratics, (somewhat) basic calculus and how to add random variables, nothing should be too magical. If not, hopefully the graphs are at least somewhat understandable.
 
