--- a/_posts/2025-07-14-mpt.md
+++ b/_posts/2025-07-14-mpt.md
@@ -43,7 +43,7 @@ The capital gains tax discount was introduced after the [1999 Ralph Review](http
 
 > The widespread privatization of major public sector enterprises has greatly increased the number of Australian households owning shares. A less harsh CGT regime which encourages taxpayers to invest in such assets will help entrench and build upon these changes. - Ralph Review
 
-As an example, if somebody makes an investment that appreciates in value by \\$100,000 and disposes of it after 1 year of holding, the capital gain is discounted by 50\% before being added to the investor's personal income. In this case, they would pay tax as if they had earned an additional \\$50,000 (instead of the \\$100,000).
+As an example, if somebody makes an investment that appreciates in value by \\$100,000 and disposes of it after 1 year of holding, the capital gain is discounted by 50% before being added to the investor's personal income. In this case, they would pay tax as if they had earned an additional \\$50,000 (instead of the \\$100,000).
 
 ### Deductions and Negative Gearing
 
